--- a/content/docs/installation.mdx
+++ b/content/docs/installation.mdx
@@ -1,31 +1,26 @@
 ---
-title: Installation
-description: Learn how to get Java up and running in your project.
+title: Instalação
+description: Aprenda como instalar e configurar Java em seu projeto.
 icon: Album
 ---
 
+## Instalação
 
-## Installation
+Como o processo de instalação é ligeiramente diferente em diferentes dispositivos, recomendamos que você verifique a [documentação oficial de instalação](https://www.java.com/en/download/help/download_options.html) para instalar **☕ Java** em seu dispositivo.
 
-Since installation process is slightly different in different devices. So we prefer that you should check the [official installation documentation](https://www.java.com/en/download/help/download_options.html) to install **☕ Java** on your device.
+## Editores de Código
 
-## Code Editors
+Existem vários tipos de editores de código para programar em Java. Os mais populares estão listados abaixo:
 
-There are various types of code editors for programming in Java. The popular ones are listed below :
-
-
-|                     Bluej                       |                              VS Code                              |                                 IntelliJ Idea                                  |
-| :----------------------------------------------:|:---------------------------------------------------------------: | :----------------------------------------------------------------------------: |
+|                                     Bluej                                     |                                            VS Code                                             |                                                IntelliJ Idea                                                |
+| :---------------------------------------------------------------------------: | :--------------------------------------------------------------------------------------------: | :---------------------------------------------------------------------------------------------------------: |
 | [![BlueJ](/img/docs/installation/bluej.png)](https://bluej.org?ref=javaistic) | [![VS Code](/img/docs/installation/vs-code.png)](https://code.visualstudio.com/?ref=javaistic) | [![Intellij Idea](/img/docs/installation/intellij-idea.png)](https://www.jetbrains.com/idea/?ref=javaistic) |
-| Free| Free | Free, Paid |
+|                                   Gratuito                                    |                                            Gratuito                                            |                                               Gratuito, Pago                                                |
 
-  You use any of the popular code editors for Java. But <b>BlueJ</b> is best as it is <b>simple</b> and <b>fast</b>.
+Você pode usar qualquer um dos editores de código populares para Java. Mas o <b>BlueJ</b> é o melhor por ser <b>simples</b> e <b>rápido</b>.
 
+## Aprendizado
 
+Após instalar o Java e configurar seu editor de código preferido, comece a [aprender](/docs/introduction) em nosso site.
 
-## Learning
-
-After installing Java and setting up your preferred code editor start [learning](/docs/introduction) from our website.
-
-<div className="mt-8"/>
-
+<div className="mt-8" />
