--- a/content/docs/introduction.mdx
+++ b/content/docs/introduction.mdx
@@ -77,7 +77,11 @@ Além dessas aplicações, Java também é usado para desenvolvimento de jogos, 
 
 #### 1. Aprenda Java com Javaistic
 
-<span className="font-extrabold text-transparent bg-clip-text bg-gradient-to-br from-sky-400 to-indigo-500">Javaistic</span> oferece uma série completa de tutoriais Java fáceis de seguir junto com exemplos apropriados. Estes tutoriais são direcionados para iniciantes absolutos sem conhecimento prévio da linguagem de programação Java.
+<span className="font-extrabold text-transparent bg-clip-text bg-gradient-to-br from-sky-400 to-indigo-500">
+  Javaistic
+</span> oferece uma série completa de tutoriais Java fáceis de seguir junto com exemplos
+apropriados. Estes tutoriais são direcionados para iniciantes absolutos sem conhecimento
+prévio da linguagem de programação Java.
 
 #### 2. Aprenda Java com Livros
 
@@ -97,9 +101,17 @@ A Oracle, a empresa que possui o Java, fornece documentação Java de qualidade.
 
 Você deve estar ansioso para aprender Java agora. No entanto, aqui estão algumas dicas e melhores práticas para seguir antes de aprender Java.
 
-- <b>Não leia tutoriais e exemplos Java como um romance</b> : A única maneira de melhorar na programação é escrevendo muito código.
-- <b>Aprenda a linguagem Java da maneira certa</b> : Se você está mudando de outra linguagem de programação (digamos C#), não escreva código no estilo C# em Java. Também, verifique este artigo sobre <a href="http://www.ibm.com/developerworks/library/j-perry-writing-good-java-code/index.html">Como escrever bom código Java?</a>
-- <b>Junte-se a comunidades Java</b>: Uma vez que você pegue o jeito de escrever programas Java simples, junte-se a comunidades e fóruns Java. Então, tente resolver problemas Java de outros programadores. É uma boa maneira de expandir seu conhecimento Java. Também, você pode obter ajuda quando estiver preso.
+- <b>Não leia tutoriais e exemplos Java como um romance</b> : A única maneira de
+  melhorar na programação é escrevendo muito código.
+- <b>Aprenda a linguagem Java da maneira certa</b> : Se você está mudando de outra
+  linguagem de programação (digamos C#), não escreva código no estilo C# em Java.
+  Também, verifique este artigo sobre <a href="http://www.ibm.com/developerworks/library/j-perry-writing-good-java-code/index.html">
+    Como escrever bom código Java?
+  </a>
+- <b>Junte-se a comunidades Java</b>: Uma vez que você pegue o jeito de escrever
+  programas Java simples, junte-se a comunidades e fóruns Java. Então, tente
+  resolver problemas Java de outros programadores. É uma boa maneira de expandir
+  seu conhecimento Java. Também, você pode obter ajuda quando estiver preso.
 
 ## Palavras Finais
 
