--- a/content/docs/spring-security-introducao.mdx
+++ b/content/docs/spring-security-introducao.mdx
@@ -1,6 +1,6 @@
 ---
-title: Introdução ao Spring Security
-description: Aprenda sobre Spring Security - o framework de segurança padrão para aplicações Spring
+title: "Introdução ao Spring Security"
+description: "Aprenda sobre Spring Security - o framework de segurança padrão para aplicações Spring"
 ---
 
 ## Introdução ao Spring Security
